# LLM-zoomcamp-2026

./: .gitignore  README.MD  pyproject.toml
01-agentic-rag/: .gitignore  HW1.ipynb  agents.ipynb  hw_rag_helper.py  persistent_rag_ingest.ipynb  pyproject.toml
01_agentic_rag/: README.MD  notebook.ipynb  persinsent_rag.ipynb  rag_cleaned.ipynb
02_vector_search/: README.MD  pyproject.toml  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
03_orchestration/: README.MD
04_evaluation/: .gitignore  01-data-gen.ipynb  02-search-eval.ipynb  04-llm-judge.ipynb  HW4.ipynb  README.md
05_monitoring/: README.md  app.py  assistant.py  dashboard.py  db_init.py  db_query.py  generate_data.py  metrics.py
llm-zoomcamp-hw2/: HW2.ipynb
llm-zoomcamp-hw5/: hw5.ipynb  pyproject.toml  q5-sql.py  q6-sql.py  sqlite_exporter.py  traced_rag.py
llm-zoomcamp-onnx/: onnx-test.ipynb
