[project]
name = "llm-zoomcamp-hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "python-dotenv>=1.2.2",
]
